src-tauri/tests/snapshots/schema_migrations__repos_branch_prefix_override_migration.snap
---
source: tests/schema_migrations.rs
expression: repos_branch_prefix_columns(&connection)
---
- - branch_prefix_custom
  - TEXT
