src-tauri/tests/snapshots/schema_migrations__workspace_browser_tabs_schema.snap
---
source: tests/schema_migrations.rs
assertion_line: 92
expression: browser_tab_schema(&connection)
---
columns:
  - default: ~
    name: id
    notNull: false
    primaryKey: true
    type: TEXT
  - default: ~
    name: workspace_id
    notNull: true
    primaryKey: false
    type: TEXT
  - default: ~
    name: url
    notNull: true
    primaryKey: false
    type: TEXT
  - default: ~
    name: title
    notNull: false
    primaryKey: false
    type: TEXT
  - default: "0"
    name: display_order
    notNull: true
    primaryKey: false
    type: INTEGER
  - default: "0"
    name: active
    notNull: true
    primaryKey: false
    type: INTEGER
  - default: "datetime('now')"
    name: created_at
    notNull: true
    primaryKey: false
    type: TEXT
  - default: "datetime('now')"
    name: updated_at
    notNull: true
    primaryKey: false
    type: TEXT
indexes:
  - name: idx_workspace_browser_tabs_one_active
    sql: CREATE UNIQUE INDEX idx_workspace_browser_tabs_one_active ON workspace_browser_tabs(workspace_id) WHERE active = 1
  - name: idx_workspace_browser_tabs_workspace_order
    sql: "CREATE INDEX idx_workspace_browser_tabs_workspace_order ON workspace_browser_tabs(workspace_id, display_order)"
  - name: sqlite_autoindex_workspace_browser_tabs_1
    sql: ~
